# django-denormalized

./: .gitignore  .travis.yml  README.md  pyproject.toml  requirements.txt  setup.py  tox.ini
.github/workflows/: build.yml  codecov.yml  pythonpublish.yml
denormalized/: __init__.py  models.py  tracker.py  types.py
src/denormalized/: __init__.py  types.py
testproject/: settings.py
testproject/testapp/: __init__.py  apps.py  models.py  tests.py
testproject/testapp/migrations/: 0002_auto_20181203_0628.py  0004_auto_20181203_1104.py  0005_auto_20181207_1127.py  0006_merge_20181225_1443.py
tests/testproject/: urls.py  wsgi.py
tests/testproject/testapp/: models.py
tests/testproject/testapp/migrations/: 0001_initial.py  0003_member_points.py  0005_auto_20181207_1342.py  0007_team_members_count.py
